--- a/index.html
+++ b/index.html
@@ -1,55 +1,67 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hackowanie</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
         <a class="navbar-brand" href="#">Hackowanie</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Strona główna</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="logowanie.html">Logowanie</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="page1.html">Podstrona 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="page2.html">Podstrona 2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="page3.html">Podstrona 3</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="page4.html">Podstrona 4</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="page5.html">Podstrona 5</a>
-                </li>
-            </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Strona główna</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="rejestracja.html">Rejestracja</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="logowanie.html">Logowanie</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page1.html">Esp32 LVGL</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page2.html">Podstrona 2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page3.html">Podstrona 3</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page4.html">Podstrona 4</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page5.html">Podstrona 5</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-    
     <div class="container">
-        <h1>Witaj na stronie Hackowanie!</h1>
-        <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie.</p>
+      <h1>Witaj na stronie Hackowanie!</h1>
+      <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie.</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
