--- a/page1.html
+++ b/page1.html
@@ -1,37 +1,131 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podstrona 1</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ESP32 Display Module</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Hackowanie</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Strona główna</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="logowanie.html">Logowanie</a>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="#">Hackowanie</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Strona główna</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="logowanie.html">Logowanie</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page1.html">Esp32 LVGL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">Podstrona 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Podstrona 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page4.html">Podstrona 4</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page5.html">Podstrona 5</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     <div class="container">
-        <h1>Podstrona 1</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h1>ESP32 Display Module</h1>
+
+      <p>
+        2,4-calowy moduł ESP32 to kompaktowy wyświetlacz dotykowy LCD z
+        wbudowanym mikrokontrolerem ESP32, który obsługuje Wi-Fi i Bluetooth.
+      </p>
+
+      <p>
+        LVGL to popularna, darmowa i open-source'owa biblioteka graficzna,
+        pozwalająca tworzyć zaawansowane interfejsy użytkownika dla wielu
+        mikrokontrolerów i wyświetlaczy. Skorzystamy z płytki rozwojowej ESP32 z
+        wbudowanym dotykowym wyświetlaczem TFT.
+      </p>
+
+      <p>
+        To bardzo wszechstronna płytka do budowy interfejsów graficznych (GUI)
+        dla projektów IoT. Jest znacznie wygodniejsza i bardziej praktyczna niż
+        oddzielne stosowanie ESP32 z ekranem TFT.
+      </p>
+
+      <h2>Szczegółowe specyfikacje płytki:</h2>
+      <ul>
+        <li>
+          Mikrokontroler: Dwurdzeniowy MCU z wbudowanymi funkcjami Wi-Fi i
+          Bluetooth
+        </li>
+        <li>Częstotliwość taktowania: Do 240 MHz</li>
+        <li>Pamięć RAM: 520 KB SRAM, 448 KB ROM</li>
+        <li>Pamięć Flash: 4 MB</li>
+        <li>Wymiary modułu: 50,0 × 86,0 mm</li>
+        <li>Napięcie robocze: 5V</li>
+        <li>Pobór mocy: około 115 mA</li>
+        <li>Waga produktu: około 50 g</li>
+      </ul>
+
+      <h2>Elementy modułu:</h2>
+      <ul>
+        <li>
+          2,8-calowy kolorowy wyświetlacz TFT z układem sterującym ILI9341
+        </li>
+        <li>
+          Rozdzielczość wyświetlacza: 240x320 pikseli, z ekranem dotykowym
+          rezystancyjnym
+        </li>
+        <li>Obwód sterowania podświetleniem</li>
+        <li>Interfejs karty TF do zewnętrznej pamięci</li>
+        <li>Interfejs szeregowy</li>
+        <li>
+          Interfejs czujnika temperatury i wilgotności (interfejs DHT11) oraz
+          rezerwowy interfejs IO
+        </li>
+      </ul>
+
+      <h2>Możliwość programowania za pomocą:</h2>
+      <ul>
+        <li>Arduino IDE</li>
+        <li>MicroPython</li>
+        <li>ESP-IDF</li>
+      </ul>
+
+      <h2>Informacje dodatkowe:</h2>
+      <p>Koszt: około 60zł + dostawa</p>
+      <p>
+        W zestawie: kabel USB C/micro, rysik, przewód do połączenia zasilania
+      </p>
+      <h2>Schematy:</h2>
+      <h2>Zdjęcia:</h2>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
