--- a/page2.html
+++ b/page2.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Hackowanie</a>
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="index.html">Hackowanie</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -28,16 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Strona główna</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="logowanie.html">Logowanie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page1.html">Esp32 LVGL</a>
+            <a class="nav-link" href="page1.html">Hardware</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page2.html">Podstrona 2</a>
@@ -50,6 +41,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page5.html">Podstrona 5</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="logowanie.html">Logowanie</a>
           </li>
         </ul>
       </div>
