--- a/page1.html
+++ b/page1.html
@@ -3,16 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ESP32 Display Module</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
+    <title>Projekty</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Hackowanie</a>
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="index.html">Hackowanie</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -28,16 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Strona główna</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="logowanie.html">Logowanie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page1.html">Esp32 LVGL</a>
+            <a class="nav-link" href="page1.html">Hardware</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page2.html">Podstrona 2</a>
@@ -51,79 +39,57 @@
           <li class="nav-item">
             <a class="nav-link" href="page5.html">Podstrona 5</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="logowanie.html">Logowanie</a>
+          </li>
         </ul>
       </div>
     </nav>
 
     <div class="container">
-      <h1>ESP32 Display Module</h1>
-
-      <p>
-        2,4-calowy moduł ESP32 to kompaktowy wyświetlacz dotykowy LCD z
-        wbudowanym mikrokontrolerem ESP32, który obsługuje Wi-Fi i Bluetooth.
-      </p>
-
-      <p>
-        LVGL to popularna, darmowa i open-source'owa biblioteka graficzna,
-        pozwalająca tworzyć zaawansowane interfejsy użytkownika dla wielu
-        mikrokontrolerów i wyświetlaczy. Skorzystamy z płytki rozwojowej ESP32 z
-        wbudowanym dotykowym wyświetlaczem TFT.
-      </p>
-
-      <p>
-        To bardzo wszechstronna płytka do budowy interfejsów graficznych (GUI)
-        dla projektów IoT. Jest znacznie wygodniejsza i bardziej praktyczna niż
-        oddzielne stosowanie ESP32 z ekranem TFT.
-      </p>
-
-      <h2>Szczegółowe specyfikacje płytki:</h2>
-      <ul>
-        <li>
-          Mikrokontroler: Dwurdzeniowy MCU z wbudowanymi funkcjami Wi-Fi i
-          Bluetooth
-        </li>
-        <li>Częstotliwość taktowania: Do 240 MHz</li>
-        <li>Pamięć RAM: 520 KB SRAM, 448 KB ROM</li>
-        <li>Pamięć Flash: 4 MB</li>
-        <li>Wymiary modułu: 50,0 × 86,0 mm</li>
-        <li>Napięcie robocze: 5V</li>
-        <li>Pobór mocy: około 115 mA</li>
-        <li>Waga produktu: około 50 g</li>
-      </ul>
-
-      <h2>Elementy modułu:</h2>
-      <ul>
-        <li>
-          2,8-calowy kolorowy wyświetlacz TFT z układem sterującym ILI9341
-        </li>
-        <li>
-          Rozdzielczość wyświetlacza: 240x320 pikseli, z ekranem dotykowym
-          rezystancyjnym
-        </li>
-        <li>Obwód sterowania podświetleniem</li>
-        <li>Interfejs karty TF do zewnętrznej pamięci</li>
-        <li>Interfejs szeregowy</li>
-        <li>
-          Interfejs czujnika temperatury i wilgotności (interfejs DHT11) oraz
-          rezerwowy interfejs IO
-        </li>
-      </ul>
-
-      <h2>Możliwość programowania za pomocą:</h2>
-      <ul>
-        <li>Arduino IDE</li>
-        <li>MicroPython</li>
-        <li>ESP-IDF</li>
-      </ul>
-
-      <h2>Informacje dodatkowe:</h2>
-      <p>Koszt: około 60zł + dostawa</p>
-      <p>
-        W zestawie: kabel USB C/micro, rysik, przewód do połączenia zasilania
-      </p>
-      <h2>Schematy:</h2>
-      <h2>Zdjęcia:</h2>
+      <h1>Podstawy do budowy:</h1>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>ESP32 LVGL</h2>
+            <p>Projekt wykorzystujący moduł ESP32 z wyświetlaczem i biblioteką LVGL</p>
+            <a href="projects/esp32-lvgl.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>M5Stick</h2>
+            <p>Projekty oparte na M5Stick, miniaturowej i wszechstronnej platformie IoT</p>
+            <a href="projects/m5stick.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>Flipper Zero</h2>
+            <p>Wszechstronny gadżet do testów i hakowania</p>
+            <a href="projects/flipper-zero.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>Raspberry Pi</h2>
+            <p>Projekty oparte na Raspberry Pi i jego możliwościach</p>
+            <a href="projects/raspberry-pi.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="container">
+            <h2>Arduino</h2>
+            <p>Projekty wykorzystujące platformę Arduino</p>
+            <a href="projects/arduino.html" class="btn btn-primary">Zobacz więcej</a>
+          </div>
+        </div>
+      </div>
     </div>
+    
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
