--- a/index.html
+++ b/index.html
@@ -11,46 +11,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="index.html">Hackowanie</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="page1.html">Hardware</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page2.html">Podstrona 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page3.html">Podstrona 3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page4.html">Podstrona 4</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page5.html">Podstrona 5</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="logowanie.html">Logowanie</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div id="navigation"></div>
+    
     <div class="container">
       <h1>Witaj na stronie Hackowanie!</h1>
       <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie.</p>
@@ -58,7 +20,11 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="template.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            loadNavbar();
+        });
+    </script>
   </body>
 </html>
-
-
