--- a/page1.html
+++ b/page1.html
@@ -53,9 +53,11 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="navigation.js"></script>
+    <script src="template.js"></script>
     <script>
-        createNavigation(true);
+        document.addEventListener('DOMContentLoaded', function() {
+            loadNavbar();
+        });
     </script>
   </body>
 </html>
