--- a/page4.html
+++ b/page4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Podstrona 1</title>
+    <title>Podstrona 4</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -11,49 +11,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="index.html">Hackowanie</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="page1.html">Hardware</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page2.html">Podstrona 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page3.html">Podstrona 3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page4.html">Podstrona 4</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page5.html">Podstrona 5</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="logowanie.html">Logowanie</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div id="navigation"></div>
 
     <div class="container">
-      <h1>Podstrona 1</h1>
+      <h1>Podstrona 4</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua.
@@ -62,5 +23,11 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="template.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            loadNavbar();
+        });
+    </script>
   </body>
 </html>
