--- a/template.html
+++ b/template.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -9,41 +8,42 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div id="navigation"></div>
-
-    <div class="container">
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="strona-na-inf/index.html">Hackowanie</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="page1.html">Hardware</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="page2.html">Podstrona 2</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="page3.html">Podstrona 3</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="page4.html">Podstrona 4</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="page5.html">Podstrona 5</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="rejestracja.html">Rejestracja</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="logowanie.html">Logowanie</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="strona-na-inf/page1.html">Hardware</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="strona-na-inf/page2.html">Podstrona 2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="strona-na-inf/page3.html">Podstrona 3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="strona-na-inf/page4.html">Podstrona 4</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="strona-na-inf/page5.html">Podstrona 5</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="strona-na-inf/rejestracja.html">Rejestracja</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="strona-na-inf/logowanie.html">Logowanie</a>
+                </li>
             </ul>
-          </div><!-- Unique content for each page goes here -->
+        </div>
+    </nav>
+
+    <div class="container">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="navigation.js"></script>
-    <script>
-        createNavigation(); // Use createNavigation(true) for project pages
-    </script>
 </body>
 </html>
