--- a/rejestracja.html
+++ b/rejestracja.html
@@ -15,14 +15,27 @@
 
     <div class="container">
       <h1>Rejestracja</h1>
-      <form>
+      <form action="register.php" method="POST">
         <div class="form-group">
           <label for="username">Nazwa użytkownika</label>
           <input
             type="text"
             class="form-control"
             id="username"
+            name="username"
             placeholder="Wprowadź nazwę użytkownika"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            placeholder="Wprowadź email"
+            required
           />
         </div>
         <div class="form-group">
@@ -31,7 +44,9 @@
             type="password"
             class="form-control"
             id="password"
+            name="password"
             placeholder="Wprowadź hasło"
+            required
           />
         </div>
         <button type="submit" class="btn btn-primary">Zarejestruj się</button>
