--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <!-- Add Font Awesome for social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
   <body>
     <div id="navigation"></div>
@@ -16,6 +18,32 @@
     <div class="container">
       <h1>Witaj na stronie Hackowanie!</h1>
       <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie.</p>
+
+      <!-- Contact section -->
+      <div class="contact-section mt-5">
+        <h2>Informacje kontaktowe:</h2>
+        <div class="row justify-content-center mt-4">
+          <!-- GitHub -->
+          <div class="col-md-4 text-center">
+            <a href="https://github.com/Kondariii" target="_blank" class="social-link">
+              <i class="fab fa-github fa-3x"></i>
+              <p class="mt-2">GitHub</p>
+            </a>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="https://www.instagram.com/jacobekpi/profilecard/?igsh=MWc0c3JrbWI1bjlt" class="social-link">
+              <i class="fab fa-instagram fa-3x"></i>
+              <p class="mt-2">Instagram</p>
+          </div>
+          <!-- Discord -->
+          <div class="col-md-4 text-center">
+            <a href="https://discord.gg" target="_blank" class="social-link">
+              <i class="fab fa-discord fa-3x"></i>
+              <p class="mt-2">Discord</p>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
