--- a/page5.html
+++ b/page5.html
@@ -15,10 +15,35 @@
 
     <div class="container">
       <h1>Podstrona 5</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-      </p>
+      
+      <!-- First row with left image -->
+      <div class="row align-items-center mb-4">
+        <div class="col-md-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <div class="col-md-6">
+            <img src="../obrazy/rasberry/schemat2.jpg" alt="sch2" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <!-- Second row with right image -->
+      <div class="row align-items-center mb-4">
+          <div class="col-md-6">
+            <img src="../obrazy/rasberry/schemat2.jpg" alt="sch2" class="img-fluid">
+          </div>
+        <div class="col-md-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
