--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <!-- Add Font Awesome for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
   <body>
@@ -17,13 +16,11 @@
     
     <div class="container">
       <h1>Witaj na stronie Hackowanie!</h1>
-      <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie.</p>
+      <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie. Autor: Jakub Krzemiński 3TP-E</p>
 
-      <!-- Contact section -->
       <div class="contact-section mt-5">
         <h2>Informacje kontaktowe:</h2>
         <div class="row justify-content-center mt-4">
-          <!-- GitHub -->
           <div class="col-md-4 text-center">
             <a href="https://github.com/Kondariii" target="_blank" class="social-link">
               <i class="fab fa-github fa-3x"></i>
@@ -35,7 +32,6 @@
               <i class="fab fa-instagram fa-3x"></i>
               <p class="mt-2">Instagram</p>
           </div>
-          <!-- Discord -->
           <div class="col-md-4 text-center">
             <a href="https://discord.gg" target="_blank" class="social-link">
               <i class="fab fa-discord fa-3x"></i>
