--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <div class="container">
       <h1>Witaj na stronie Hackowanie!</h1>
-      <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie. Autor: Jakub Krzemiński 3TP-E</p>
+      <p>Strona poświęcona różnym technikom bezpieczeństwa w Internecie.</p>
 
       <div class="contact-section mt-5">
         <h2>Informacje kontaktowe:</h2>
